cloud-infra-macros/tests/fails/zero_for_create_non_zero_number.rs
use cloud_infra_macros::create_non_zero_number;

fn example() {
    let key = create_non_zero_number!(0);
}

fn main() {}
