cloud-infra-macros/tests/fails/zero_for_create_non_zero_number.stderr
error: proc macro panicked
 --> tests/fails/zero_for_create_non_zero_number.rs:4:15
  |
4 |     let key = create_non_zero_number!(0);
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Value should not be null
